updated CSS, JS, and HTML files

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body,
 
 body {
   font-family: sans-serif;
-  background-color: #00ff21;
+  background-color: #002fff;
 }
 
 .container {
@@ -27,15 +27,15 @@ header {
   text-align: center;
   padding: 20px;
   padding-top: 0px;
-  color: hsl(206, 17%, 28%);
+  color: hsl(180, 8%, 3%);
 }
 
 .card {
-  background-color: hsl(0, 0%, 100%);
+  background-color: hsla(0, 0%, 100%, 0.356);
   border-radius: 5px;
   border-width: 1px;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px;
-  color: hsl(206, 17%, 28%);
+  box-shadow: rgba(0, 0, 0, 0.068) 0px 2px 8px 0px;
+  color: hsl(0, 0%, 3%);
   font-size: 18px;
   margin: 0 auto;
   max-width: 800px;
