--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body,
 
 body {
   font-family: sans-serif;
-  background-color: #002fff;
+  background-color: #f5f5f5;
 }
 
 .container {
@@ -24,10 +24,23 @@ body {
 }
 
 header {
+  width: 100%;
   text-align: center;
   padding: 20px;
   padding-top: 0px;
   color: hsl(180, 8%, 3%);
+}
+
+h1 {
+  color: #FFFFFF;
+  font-size: 3rem;
+  text-align: left;
+}
+
+h2 {
+  color: #161515;
+  font-size: 3rem;
+  text-align: center;
 }
 
 .card {
